--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <main class="container my-5">
       <h1 class="titulo mb-4">
-        Derecho marítimo para oficiales mercantes
+        Maniobras de buques mercantes
       </h1>
       <div class="mb-5">
         <div class="d-flex justify-content-between mb-2">
