--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           </div>
         </div>
         <div class="d-flex align-items-center">
+          <!-- Botón modo oscuro -->
+          <button class="btn btn-icon me-2" id="darkModeToggle" type="button" aria-label="Alternar modo oscuro">
+            <i class="bi bi-moon-fill" id="darkModeIcon"></i>
+          </button>
           <span class="badge-flag" id="progressBadge">0 / 0</span>
         </div>
       </div>
